--- a/react-wc/package.json
+++ b/react-wc/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "24.0.11",
+    "@types/node": "11.13.4",
+    "@types/react": "16.8.13",
+    "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "typescript": "3.4.3",
     "web-react-components": "^1.4.1"
   },
   "scripts": {
@@ -18,6 +23,9 @@
     "extends": "react-app"
   },
   "browserslist": [
-    "chrome 73"
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
   ]
 }
