--- a/react-wc/package.json
+++ b/react-wc/package.json
@@ -6,14 +6,7 @@
     "scripts": {
         "start": "cross-env NODE_ENV=development webpack-dev-server --open",
         "build": "cross-env NODE_ENV=production webpack",
-        "lint": "eslint ./src/**/**.js",
-        "lint:fix": "eslint ./src/**/**.js --fix",
-        "test": "jest",
-        "test:watch": "yarn run test --watch",
-        "test:cover": "yarn run test --coverage",
-        "cypress:open": "cypress open",
-        "precommit": "yarn run lint && yarn test",
-        "prepush": "yarn run lint"
+        "lint": "eslint ./src/**/**.js"
     },
     "keywords": [
         "react",
