--- a/angular-ivy/package.json
+++ b/angular-ivy/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.803.15",
-    "@angular/animations": "~9.0.0-next.14",
-    "@angular/common": "~9.0.0-next.14",
-    "@angular/compiler": "~9.0.0-next.14",
-    "@angular/core": "~9.0.0-next.14",
-    "@angular/elements": "^9.0.0-next.14",
-    "@angular/forms": "~9.0.0-next.14",
-    "@angular/platform-browser": "~9.0.0-next.14",
-    "@angular/platform-browser-dynamic": "~9.0.0-next.14",
-    "@angular/router": "~9.0.0-next.14",
+    "@angular-devkit/build-angular": "^0.900.0-rc.4",
+    "@angular/animations": "~9.0.0-rc.4",
+    "@angular/common": "~9.0.0-rc.4",
+    "@angular/compiler": "~9.0.0-rc.4",
+    "@angular/core": "~9.0.0-rc.4",
+    "@angular/elements": "^9.0.0-rc.4",
+    "@angular/forms": "~9.0.0-rc.4",
+    "@angular/platform-browser": "~9.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.4",
+    "@angular/router": "~9.0.0-rc.4",
     "core-js": "^2.5.4",
     "document-register-element": "^1.7.2",
     "rxjs": "~6.5.3",
@@ -29,9 +29,9 @@
     "codelyzer": "^5.2.0"
   },
   "devDependencies": {
-    "@angular/cli": "~9.0.0-next.18",
-    "@angular/compiler-cli": "~9.0.0-next.14",
-    "@angular/language-service": "~9.0.0-next.14",
+    "@angular/cli": "~9.0.0-rc.4",
+    "@angular/compiler-cli": "~9.0.0-rc.4",
+    "@angular/language-service": "~9.0.0-rc.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
