--- a/angular copy/angular.json
+++ b/angular copy/angular.json
@@ -13,7 +13,6 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "aot": true,
             "outputPath": "dist/angular-noivy",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -55,10 +54,6 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
                 }
               ]
             }
@@ -141,8 +136,5 @@
       }
     }
   },
-  "defaultProject": "angular-noivy",
-  "cli": {
-    "analytics": "d02d5a43-728a-40d2-bd0c-3faa3a21090a"
-  }
+  "defaultProject": "angular-noivy"
 }
