--- a/angular copy/package.json
+++ b/angular copy/package.json
@@ -11,30 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.900.0-rc.4",
-    "@angular/animations": "~9.0.0-rc.4",
-    "@angular/common": "~9.0.0-rc.4",
-    "@angular/compiler": "~9.0.0-rc.4",
-    "@angular/core": "~9.0.0-rc.4",
-    "@angular/elements": "^9.0.0-rc.4",
-    "@angular/forms": "~9.0.0-rc.4",
-    "@angular/platform-browser": "~9.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.4",
-    "@angular/router": "~9.0.0-rc.4",
+    "@angular/animations": "~8.2.12",
+    "@angular/common": "~8.2.12",
+    "@angular/compiler": "~8.2.12",
+    "@angular/core": "~8.2.12",
+    "@angular/elements": "^8.2.12",
+    "@angular/forms": "~8.2.12",
+    "@angular/platform-browser": "~8.2.12",
+    "@angular/platform-browser-dynamic": "~8.2.12",
+    "@angular/router": "~8.2.12",
     "core-js": "^2.5.4",
-    "document-register-element": "^1.7.2",
     "rxjs": "~6.5.3",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "codelyzer": "^5.2.0"
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1",
+    "document-register-element": "^1.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "~9.0.0-rc.4",
-    "@angular/compiler-cli": "~9.0.0-rc.4",
-    "@angular/language-service": "~9.0.0-rc.4",
+    "@angular-devkit/build-angular": "~0.803.15",
+    "@angular/cli": "~8.3.15",
+    "@angular/compiler-cli": "~8.2.12",
+    "@angular/language-service": "~8.2.12",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -45,6 +45,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.6.4"
+    "typescript": "~3.5.3"
   }
 }
