--- a/angular/package.json
+++ b/angular/package.json
@@ -12,26 +12,26 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "^9.1.3",
-    "@angular/animations": "~9.0.0-rc.8",
-    "@angular/common": "~9.0.0-rc.8",
-    "@angular/compiler": "~9.0.0-rc.8",
-    "@angular/core": "~9.0.0-rc.8",
-    "@angular/elements": "^9.0.0-rc.8",
-    "@angular/forms": "~9.0.0-rc.8",
-    "@angular/platform-browser": "~9.0.0-rc.8",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.8",
-    "@angular/router": "~9.0.0-rc.8",
+    "@angular/animations": "~9.1.3",
+    "@angular/common": "~9.1.3",
+    "@angular/compiler": "~9.1.3",
+    "@angular/core": "~9.1.3",
+    "@angular/elements": "^9.1.3",
+    "@angular/forms": "~9.1.3",
+    "@angular/platform-browser": "~9.1.3",
+    "@angular/platform-browser-dynamic": "~9.1.3",
+    "@angular/router": "~9.1.3",
     "core-js": "^3.6.4",
     "document-register-element": "^1.7.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.8",
-    "@angular/cli": "~9.0.0-rc.8",
-    "@angular/compiler-cli": "~9.0.0-rc.8",
-    "@angular/language-service": "~9.0.0-rc.8",
+    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular/cli": "~9.1.3",
+    "@angular/compiler-cli": "~9.1.3",
+    "@angular/language-service": "~9.1.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
